# stupyder

./: Cargo.toml  Trunk.toml  index.html  stupyder.js
src/: code_editor.rs  example_project.py  main.rs  plot.rs
