[package]
name = "stupyder"
version = "0.1.0"
authors = ["Duncan Freeman <duncan.freeman1@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # To support Linux (and CI)
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

egui-plotter = "0.4.0"
plotters= "0.3.7"

egui_extras = { version = "0.31.1", features = ["syntect"] }

ndarray = { git = "https://github.com/Masterchef365/ndarray.git", branch = "bounds-check" }
#ndarray = { path = "../rustpython-ndarray" }
rustpython-ndarray = { git = "https://github.com/masterchef365/rustpython-ndarray.git", branch = "main" }
rustpython-plotters = { path = "../rustpython-plotters" }

rustpython-vm = "0.4.0"
rustpython-stdlib = "0.4.0"

rfd = "0.15.3"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
smol = "2.0.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.dev]
opt-level = "s"
